--- a/frontend/src/app/report-viewer/report-viewer.component.html
+++ b/frontend/src/app/report-viewer/report-viewer.component.html
@@ -1,3 +1,3 @@
-<p>
-  report-viewer works!
-</p>
+<dx-report-viewer [reportUrl]="reportUrl" height="700px">
+  <dxrv-request-options [invokeAction]="invokeAction" [host]="hostUrl"></dxrv-request-options>
+</dx-report-viewer>
