--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,11 +5,11 @@
   </h1>
   <div>
     <a routerLink="/" class="link">Home</a>
-    <a routerLink="lazy-loading/dashboard-designer" class="link">Dashboard Designer</a>
-    <a routerLink="lazy-loading/dashboard-viewer"  class="link">Dashboard Viewer</a>
-    <a routerLink="lazy-loading/report-designer"  class="link">Report Designer</a>
-    <a routerLink="lazy-loading/report-viewer"  class="link">Report Viewer</a>
-    <a routerLink="lazy-loading/pivot-grid" class="link">Pivot Grid</a>
+    <a routerLink="lazy-loading/dashboards/designer" class="link">Dashboard Designer</a>
+    <a routerLink="lazy-loading/dashboards/viewer"  class="link">Dashboard Viewer</a>
+    <a routerLink="lazy-loading/reports/designer"  class="link">Report Designer</a>
+    <a routerLink="lazy-loading/reports/viewer"  class="link">Report Viewer</a>
+    <a routerLink="lazy-loading/pivot-grids/viewer" class="link">Pivot Grid</a>
   </div>
 </div>
 <router-outlet></router-outlet>
